force-app/main/default/objects/PILoan__c/PILoan__c.object-meta.xml
<CustomObject>
    <label>PROC Order Line+Loan</label>
    <nameField>
        <displayFormat>PIL-{000000}</displayFormat>
        <label>P/I+LOAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROC Order Line+Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>