force-app/main/default/objects/PILoan__c/fields/PurchasingInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>PurchasingInvoiceID__c</fullName>
    <label>PURCHASING INVOICE ID</label>
    <referenceTo>PurchasingInvoice__c</referenceTo>
    <relationshipName>PILoan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>