force-app/main/default/objects/PILoan__c/fields/UnpaidBalancePILocalForLoan__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalancePILocalForLoan__c</fullName>
    <label>UNPAID BALANCE P/I(LOCAL)-FOR LOAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>